---------------------------------------------------------------------------------------------------
Version: 1.0.14
Date: 2025-04-
  Changes:
    - Hypercell accumulators and solar panels unlocked after AI cores
    - Can put 5 Hypercell accumulators or solar panels in a rocket (instead of 1)
    - Fixed recycling recling results for MAGLEV trains
---------------------------------------------------------------------------------------------------
Version: 1.0.13
Date: 2025-04-18
  Changes:
    - Added surface condition: temperature-celcius, removed solar flares, changed some physical lore to be more realistic
    - Re-authorized reactors (they're still useless on Moshine)
    - Buildings made to be built on Moshine only, and some made too heavy for a rocket
    - Long stack inserter tech: *100 ingredients, /100 duration
    - Changed name of "Indexer" to "Compute farm"
    - Neural computer craft time: 120 -> 30s, webbed processor: 10 -> 2s
  Sound:
    - Increased sound of data extractor
  Compatibility:
    - Tech code made more robust to avoid crash with Research-Multiplier and potentially other mods
    - Made ring-teleporter compatible
  Bugfixes:
    - optical-fiber shouldn't collide with the player diagonally
---------------------------------------------------------------------------------------------------
Version: 1.0.12
Date: 2025-04-11
  Graphics:
    - Reworked AI core graphics again (closer to their first version, but less random colors)
    - Reworked webbed processors graphics
---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: 2025-04-10
  Changes:
    - Added 5 achievements
    - Do away with "space platforms for ground" dependency
    - Display ai training recipes with the rest of moshine's processes
  Locale:
    - Changed maraxsis glass' name to "reinforced glass"
  Graphics:
    - Reworked AI core icons (follows the colors of quality and look like a progression)